Fix differences in cover letter spacing between xpub and reviewer

--- a/src/ui/styles/CoverLetter.scss
+++ b/src/ui/styles/CoverLetter.scss
@@ -42,6 +42,12 @@
             border-color: rgb(224, 224, 224);
             padding: 0.375rem;
             border-radius: 0rem 0rem 0.1875rem 0.1875rem;
+            padding-bottom: 2rem;
+
+            p {
+                height: 1.8rem;
+                margin: 0;
+            }
         }
     }
 }
